Add configurable option to generate "zero value" measurements when no data is found.