@@ -29,7 +29,6 @@ import java.time.Duration;
 import java.time.Period;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import org.springframework.dao.TransientDataAccessResourceException;
 import net.solarnetwork.central.datum.domain.DatumReadingType;
@@ -55,7 +54,7 @@ import net.solarnetwork.domain.datum.StreamDatum;
  * JDBC implementation of {@link MeasurementDao}.
  *
  * @author matt
- * @version 1.0
+ * @version 1.1
  */
 public class DefaultMeasurementDao implements MeasurementDao {
 
@@ -63,6 +62,7 @@ public class DefaultMeasurementDao implements MeasurementDao {
 	public static final Duration MAX_QUERY_DURATION = Duration.ofHours(1);
 
 	private final ReadingDatumDao readingDatumDao;
+	private boolean createZeroValueMeasurementsOnMissingData;
 
 	/**
 	 * Constructor.
@@ -115,36 +115,47 @@ public class DefaultMeasurementDao implements MeasurementDao {
 				throw new TransientDataAccessResourceException("IO error querying datum.", e);
 			}
 			if ( processor.getData().isEmpty() ) {
-				return Collections.emptyList();
-			}
-			StreamDatum sd = processor.getData().getFirst();
-			if ( sd instanceof AggregateDatum d ) {
-				ObjectDatumStreamMetadata meta = processor.getMetadataProvider()
-						.metadataForStreamId(d.getStreamId());
+				if ( !createZeroValueMeasurementsOnMissingData ) {
+					return List.of();
+				}
+				// generate a "zero" measurement value
 				AssetInstantaneousDatumConfiguration inst = asset.getInstantaneous();
-				DatumProperties props = d.getProperties();
-				DatumPropertiesStatistics stats = d.getStatistics();
-				for ( String propName : inst.getPropertyNames() ) {
-					int idx = meta.propertyIndex(DatumSamplesType.Instantaneous, propName);
-					if ( idx < 0 ) {
-						continue;
-					}
-
-					BigDecimal v = switch (inst.statisticType()) {
-						case Maximum -> stats.getInstantaneousMaximum(idx);
-						case Minimum -> stats.getInstantaneousMinimum(idx);
-						case Count -> stats.getInstantaneousCount(idx);
-						default -> props.instantaneousValue(idx);
-					};
-					if ( v == null ) {
-						continue;
-					}
-					if ( inst.getMultiplier() != null ) {
-						v = v.multiply(inst.getMultiplier());
-					}
-					Measurement m = Measurement.instantaneousMeasurement(v, asset.getPhase(),
-							inst.getUnit(), criteria.getEndDate());
+				for ( @SuppressWarnings("unused")
+				String propName : inst.getPropertyNames() ) {
+					Measurement m = Measurement.instantaneousMeasurement(BigDecimal.ZERO,
+							asset.getPhase(), inst.getUnit(), criteria.getEndDate());
 					result.add(m);
+				}
+			} else {
+				StreamDatum sd = processor.getData().getFirst();
+				if ( sd instanceof AggregateDatum d ) {
+					ObjectDatumStreamMetadata meta = processor.getMetadataProvider()
+							.metadataForStreamId(d.getStreamId());
+					AssetInstantaneousDatumConfiguration inst = asset.getInstantaneous();
+					DatumProperties props = d.getProperties();
+					DatumPropertiesStatistics stats = d.getStatistics();
+					for ( String propName : inst.getPropertyNames() ) {
+						int idx = meta.propertyIndex(DatumSamplesType.Instantaneous, propName);
+						if ( idx < 0 ) {
+							continue;
+						}
+
+						BigDecimal v = switch (inst.statisticType()) {
+							case Maximum -> stats.getInstantaneousMaximum(idx);
+							case Minimum -> stats.getInstantaneousMinimum(idx);
+							case Count -> stats.getInstantaneousCount(idx);
+							default -> props.instantaneousValue(idx);
+						};
+						if ( v == null ) {
+							continue;
+						}
+						if ( inst.getMultiplier() != null ) {
+							v = v.multiply(inst.getMultiplier());
+						}
+						Measurement m = Measurement.instantaneousMeasurement(v, asset.getPhase(),
+								inst.getUnit(), criteria.getEndDate());
+						result.add(m);
+					}
 				}
 			}
 		}
@@ -160,35 +171,67 @@ public class DefaultMeasurementDao implements MeasurementDao {
 				throw new TransientDataAccessResourceException("IO error querying datum.", e);
 			}
 			if ( processor.getData().isEmpty() ) {
-				return Collections.emptyList();
-			}
-			StreamDatum sd = processor.getData().getFirst();
-			if ( sd instanceof ReadingDatum d ) {
-				ObjectDatumStreamMetadata meta = processor.getMetadataProvider()
-						.metadataForStreamId(d.getStreamId());
+				// generate a "zero" measurement value
 				AssetEnergyDatumConfiguration energy = asset.getEnergy();
-				DatumProperties props = d.getProperties();
-				for ( String propName : energy.getPropertyNames() ) {
-					int idx = meta.propertyIndex(DatumSamplesType.Accumulating, propName);
-					if ( idx < 0 ) {
-						continue;
+				var m = Measurement.energyMeasurement(BigDecimal.ZERO, asset.getPhase(),
+						energy.getUnit(), criteria.getEndDate(), energy.getType(), energy.getDirection(),
+						criteria.getStartDate());
+				result.add(m);
+			} else {
+				StreamDatum sd = processor.getData().getFirst();
+				if ( sd instanceof ReadingDatum d ) {
+					ObjectDatumStreamMetadata meta = processor.getMetadataProvider()
+							.metadataForStreamId(d.getStreamId());
+					AssetEnergyDatumConfiguration energy = asset.getEnergy();
+					DatumProperties props = d.getProperties();
+					for ( String propName : energy.getPropertyNames() ) {
+						int idx = meta.propertyIndex(DatumSamplesType.Accumulating, propName);
+						if ( idx < 0 ) {
+							continue;
+						}
+						BigDecimal v = props.accumulatingValue(idx);
+						if ( v == null ) {
+							continue;
+						}
+						if ( energy.getMultiplier() != null ) {
+							v = v.multiply(energy.getMultiplier());
+						}
+						var m = Measurement.energyMeasurement(v, asset.getPhase(), energy.getUnit(),
+								d.getEndTimestamp(), energy.getType(), energy.getDirection(),
+								d.getTimestamp());
+						result.add(m);
 					}
-					BigDecimal v = props.accumulatingValue(idx);
-					if ( v == null ) {
-						continue;
-					}
-					if ( energy.getMultiplier() != null ) {
-						v = v.multiply(energy.getMultiplier());
-					}
-					var m = Measurement.energyMeasurement(v, asset.getPhase(), energy.getUnit(),
-							d.getEndTimestamp(), energy.getType(), energy.getDirection(),
-							d.getTimestamp());
-					result.add(m);
 				}
 			}
 		}
 
 		return result;
+	}
+
+	/**
+	 * Get the missing data zero measurement mode.
+	 *
+	 * @return {@code true} to create zero-valued measurement instances if no
+	 *         datum data is available for a given measurement period, or
+	 *         {@code false} to return an empty result set
+	 * @since 1.1
+	 */
+	public boolean isCreateZeroValueMeasurementsOnMissingData() {
+		return createZeroValueMeasurementsOnMissingData;
+	}
+
+	/**
+	 * Set the missing data zero measurement mode.
+	 *
+	 * @param createZeroValueMeasurementsOnMissingData
+	 *        {@code true} to create zero-valued measurement instances if no
+	 *        datum data is available for a given measurement period, or
+	 *        {@code false} to return an empty result set
+	 * @since 1.1
+	 */
+	public void setCreateZeroValueMeasurementsOnMissingData(
+			boolean createZeroValueMeasurementsOnMissingData) {
+		this.createZeroValueMeasurementsOnMissingData = createZeroValueMeasurementsOnMissingData;
 	}
 
 }
